syntax = "proto3";

package com.road.yishi.proto.outercity;

message VehicleInfoMsg {
  int32 nodeId = 1;
  int32 posX = 2;
  int32 posY = 3;
  repeated int32 protectPlayer = 4;
  repeated int32 pushPlayer = 5;
  int32 leftTime = 6;
  int32 guildId = 7;
  int32 status = 8;
  string guildName = 9;
  int32 id = 10;
  int32 targetPosX = 11;
  int32 targetPosY = 12;
  int32 speed = 13;
  int32 movePosX = 14;
  int32 movePosY = 15;
  int32 protectStatus = 16;
  int32 pushStatus = 17;
  string fightPlayer = 18;
}
